
Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.0 - 4/10/2011 - Aaron Edwards & S H Mohanjith
----------------------------------------------------------------------
- Global carts/checkout - PayPal Express only compatible gateway currently
- Downloadable Products
- Product variations
- Per order product limits
- Skipping payment form page if only one gateway allowed
- Hide cart widget on cart pages
- Many bugfixes

1.3.1 - 3/25/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fixed an email bug with the new manual payments gateway

1.3 - 3/24/2011 - Aaron Edwards
----------------------------------------------------------------------
- New Manual Payments gateway added! Now accept cash, checks, EFT, etc.
- Removed cart widget thumbnail settings until they actually do something
- Other small bugfixes

1.2.2 - 3/16/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fix to new order ID filter
- Product list categories dropdown filter fixed in 3.1
- Fixed virtual page display issues in some themes

1.2.1 - 3/11/2011 - Aaron Edwards
----------------------------------------------------------------------
- Small Payment gateway bugfixes
- Chained payments not clearing cart bugfix

1.2.0 - 3/10/2011 - S H Mohanjith
----------------------------------------------------------------------
- Headway theme compatiblity fix: Missing argument 2 for MarketPress::filter_nav_menu()
- Fix category dropdown widget js
- Add filter to orderid generation
- Additional classes and filters added for our custom theme
- Added primary key on global term_relationships table to prevent duplicates
- More 2CO plugin conflict fixes

1.1.9 - 2/18/2011 - Aaron Edwards
----------------------------------------------------------------------
- Hooks added for externally loaded gateway/shipping plugins