@@ -132,7 +132,7 @@ class MP_Gateway_Paypal_Chained_Payments extends MP_Gateway_API {
    * @param array $shipping_info. Contains shipping info and email in case you need it
    */
 	function process_payment($cart, $shipping_info) {
-    global $mp;
+    global $mp, $current_user;
 
     //create order id for paypal invoice
     $order_id = $mp->generate_order_id();
@@ -148,6 +148,7 @@ class MP_Gateway_Paypal_Chained_Payments extends MP_Gateway_API {
 			//setup transients for ipn in case checkout doesn't redirect (ipn should come within 12 hrs!)
 			set_transient('mp_order_'. $order_id . '_cart', $cart, 60*60*12);
 			set_transient('mp_order_'. $order_id . '_shipping', $shipping_info, 60*60*12);
+			set_transient('mp_order_'. $order_id . '_userid', $current_user->ID, 60*60*12);
 			
 			//go to paypal for final payment confirmation
       $this->RedirectToPayPal($paykey);
@@ -247,7 +248,10 @@ class MP_Gateway_Paypal_Chained_Payments extends MP_Gateway_API {
         //succesful payment, create our order now
         if ($create_order) {
           $order_id = $mp->create_order($result["trackingId"], $mp->get_cart_contents(), $_SESSION['mp_shipping_info'], $payment_info, $paid);
-        } else {
+          delete_transient('mp_order_' . $order_id . '_cart');
+          delete_transient('mp_order_' . $order_id . '_shipping');
+			  	delete_transient('mp_order_' . $order_id . '_userid');
+				} else {
           $mp->cart_checkout_error( sprintf(__('Sorry, your order was not completed. Please <a href="%s">go back and try again</a>.', 'mp'), mp_checkout_step_url('checkout')) );
           return;
         }
@@ -525,13 +529,14 @@ class MP_Gateway_Paypal_Chained_Payments extends MP_Gateway_API {
         //succesful payment, create our order now
         $cart = get_transient('mp_order_' . $order_id . '_cart');
 			  $shipping_info = get_transient('mp_order_' . $order_id . '_shipping');
-			  //TODO: make saving order id into usermeta possible
-        $success = $mp->create_order($order_id, $cart, $shipping_info, $payment_info, $paid);
+			  $user_id = get_transient('mp_order_' . $order_id . '_userid');
+        $success = $mp->create_order($order_id, $cart, $shipping_info, $payment_info, $paid, $user_id);
         
         //if successful delete transients
         if ($success) {
           delete_transient('mp_order_' . $order_id . '_cart');
           delete_transient('mp_order_' . $order_id . '_shipping');
+			  	delete_transient('mp_order_' . $order_id . '_userid');
         }
       }
 
