@@ -10,10 +10,11 @@ Change Log:
 - Global carts/checkout - PayPal Express only compatible gateway currently
 - Downloadable Products
 - Product variations
-- Per order product limits
+- Per order product limits - ALMOST DONE
 - Skipping payment form page if only one gateway allowed
 - Hide cart widget on cart pages
-- Many bugfixes
+- Moneybookers gateway
+- Many many bugfixes
 
 1.3.1 - 3/25/2011 - Aaron Edwards
 ----------------------------------------------------------------------
